--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "moongose": "^1.0.0",
     "prettier": "^3.6.2"
   }
 }
